<resources>
    <string name="app_name" translatable="false">Demo</string>

    <string name="action_settings">Settings</string>
    <string name="settings_title_activity">Settings</string>


    <string name="pref_langs_key">lang</string>
    <string name="pref_langs_label">Listening Language</string>

    <string name="pref_langs_label_english" translatable="false">English</string>
    <string name="pref_langs_label_arabic">Arabic</string>
    <string name="pref_langs_english" translatable="false">english</string>
    <string name="pref_langs_arabic" translatable="false">arabic</string>
    <string name="scan_qr">scan QR</string>


    <string name="google_vision" translatable="false">Google API vision scanner</string>

    <string name="show_custom_notification" translatable="false">show custom notification</string>
    <string name="audio_player_notification_channel_name" translatable="false">Primary</string>

    <string name="play">play</string>
    <string name="resume">resume</string>
    <string name="pause">pause</string>
    <string name="found_new_qr_code">found new Qr code?</string>
    <string name="demo">Scan the QR code on the statue and get some info about it</string>
    <string name="scan_qr_code">Scan QR Code?</string>

    <!-- for forms -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full name</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="left">Left</string>
    <string name="your_info">Your Info</string>

    <string name="don_t_have_account_let_s_create_one"> let\'s create new account!</string>
    <string name="title_activity_start" translatable="false">StartActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--  APP STRINGS  -->
    <string name="error_while_query">something went wrong while querying data</string>
    <string name="unknown_qr">unknown QR has been scanned</string>
    <string name="enable_share_listening_feature">please enable share listening from home first</string>
    <string name="group_empty">all have been removed, you\'r alone now!</string>
    <string name="your_group_is_empty">your group is empty</string>
    <string name="not_alone_in_listening">"you're not alone when listening"</string>
    <string name="profile_image_updated">profile image has been updated!</string>
    <string name="profile_image_didnt_updated">profile image hasn\'t been updated!</string>
    <string name="upload_image">uploading …</string>

    <string name="add_new_member">add new member</string>
    <string name="member_username">member username!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove_member">remove member!</string>

    <string name="error_while_scanning">Error occurred while scanning</string>


    <string name="check_available_network">Please check connection state!</string>
    <string name="authenticating">Authenticating…</string>
    <string name="enter_form_parameter">Please enter the credentials!</string>
    <string name="logging">Logging in …</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_valid_mail">enter a valid email address</string>
    <string name="password_check">between 4 and 10 alphanumeric characters</string>
    <string name="image_fetch">fetch image …</string>
    <string name="device_token_didnt_update">"device token didn't be updated successfully please reinstall the application"</string>


    <string name="new_track">new track</string>
    <string name="play_new_track">play it?</string>


    <string name="select_unique_username">please select another one it\'s already exist</string>
    <string name="your_username_is">your user name is </string>
    <string name="reason_for_user_name">you can use it in sharing listening feature</string>

    <string name="select_lang_first">please select your language from setting please!</string>

    <string name="creating_account">Creating Account....</string>
    <string name="sign_up_failed">SignUp failed</string>

    <string name="name_check">at least 3 characters</string>
    <string name="mail_check">enter a valid email address</string>

    <string name="password_match">Password Do not match</string>

    <string name="player_title">playing audio</string>

    <string name="profile">Profile</string>

    <string name="log_in">log in</string>

    <string name="mail_hint">e-mail</string>
    <string name="password_hint">password</string>

    <string name="try_unique_username_hint">try unique username</string>
    <string name="submit_unique_username">submit</string>
    <string name="full_name_hint">Full Name</string>
    <string name="re_password_hint">Re-password</string>
    <string name="register">Register</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="home">Home</string>
    <string name="scanner">Scanner</string>
    <string name="settings">Settings</string>
    <string name="fire_group_share_listening">Fire group(share listening)</string>
    <string name="visitors_feed_backs">visitors feedback</string>
    <string name="leave_us">leave us</string>
    <string name="more_info">more info</string>
    <string name="about_guidake_team">about Guidake team</string>
    <string name="successfully_registered">successfully registered!</string>
    <string name="sty_to_select_username">you will stay here with us to select unique username</string>
    <string name="select_unique_username_alert">we unable to select unique username for you,,please select a one</string>
    <string name="select_username">please type username</string>
    <string name="mail_valid">use a valid and exist mail</string>
    <string name="failed_login_google">something went wrong,please try again</string>
    <string name="gmail_used_before">this account has been used by another account</string>
    <string name="use_gmail_in_login_form">please use it in log-in form</string>
    <string name="how_to_use">how to use</string>
    <string name="usage">
        app in your hand now just like your tour guide in great egyptian museum.\n
        if you found an exciting statue, just press \"Scan qr code\" button in home screen or from left menu
        then scan it, you will get an audio file contain some interesting info about it.\n

        also from left menu press "fire share listening button" now you can go to your profile,
        then add members so just you scan QR then all info will be delivered to them,\n
        you can free your group or remove single member.\n
        also you can send feedback about your visit , and see other feedback about their visit
    </string>
    <string name="welcome_to_guidak">welcome to Guidak</string>
    <string name="brief_description_for_using">brief description for using:</string>
    <string name="check_you_internet_connection_and_reopen_this_page">check you internet connection and reopen this page</string>
    <string name="user_already_fired_group">you already published one,,, go and add memebers</string>

</resources>
