<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scanner"
            android:title="@string/scanner" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_fire_group"
            android:icon="@drawable/ic_group_black_24"
            android:title="@string/fire_group_share_listening" />

        <item
            android:id="@+id/ic_feedback"
            android:icon="@drawable/ic_feedback_black"
            android:title="@string/visitors_feed_backs"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/leave_us"/>

        <item android:title="@string/more_info">
            <menu>
                <item
                    android:id="@+id/nav_about_developers"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/about_guidake_team" />

                <item
                    android:id="@+id/nav_how_to_use"
                    android:icon="@drawable/how_to_use_app"
                    android:title="@string/how_to_use" />

            </menu>
        </item>


    </group>

</menu>
