<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_brown"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/inputTextColor"
        android:theme="@style/AppTheme.InputTextThem"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_brown"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/inputTextColor"
        android:theme="@style/AppTheme.InputTextThem"
        app:fontFamily="serif" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_brown"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/inputTextColor"
        android:theme="@style/AppTheme.InputTextThem"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/input_reEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_brown"
        android:hint="@string/re_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/inputTextColor"
        android:theme="@style/AppTheme.InputTextThem"
        app:fontFamily="serif" />

</LinearLayout>